kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision16.sem

function Bar(): Integer {
  Integer."1"
}

function Bar(): Boolean {
  Boolean."true"
}
